test/classes/figueroa/ErroneousOpOverloading2.good
ErroneousOpOverloading2.chpl:4: error: invalid method name
