test/classes/figueroa/ErroneousOpOverloading2.chpl
class C {
}

proc C.-(x) {writeln("In -, x is ", x);}
var c: C = new C();
